reset new deck every new game

--- a/JS mean/deck_of_cards.html
+++ b/JS mean/deck_of_cards.html
@@ -140,6 +140,8 @@
           x.clear("cards")
           x.clear("cardsp")
 
+          x.reset()
+
           y.emptyHand()
           y.takeCard( x.deal() );
           y.takeCard( x.deal() );
